# demo_template_cookie

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  config.yaml.sample  docker-compose.yml.sample  pyproject.toml
demo_temp/: __main__.py
demo_temp/src/adapters/opencti/: create_connector_adapter.py
demo_temp/src/application/: connector.py
demo_temp/src/core/entities/: process_sariel_date.py  producer.py  worker.py
demo_temp/src/core/entities/opencti/: config.py  connector.py  connector_config.py  demo_temp_config.py  octi_helper.py  opencti_config.py
demo_temp/src/core/usecases/: fetch_sariel_api.py  process_sariel_data.py
demo_temp/src/core/usecases/opencti/create_connector/: create_connector.py  create_connector_contract.py  create_connector_contract_builder.py  create_connector_port.py  create_connector_port_builder.py
demo_temp/src/utils/: debug.py  errors.py  pycti_utils.py  singleton.py
gherkin_files/constraints/opencti/implemented/: connector_fail_invalid_configuration.feature  connector_fail_load_configuration.feature
gherkin_files/features/opencti/implemented/: connector_config_load.feature
tests/constraints/opencti/: test_connector_fail_invalid_configuration.py  test_connector_fail_load_configuration.py
tests/features/opencti/: test_connector_config_load.py
